gestion des titre pack

--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@
             <div class="program-card starter-pack">
               <div class="program-card__shine"></div>
               <div class="program-card__hover-effect"></div>
-              <div class="program-card__badge">Stater Pack</div>
+              <div class="program-card__badge">Starter Pack</div>
               <div class="program-card__header">
                 <div class="program-card__icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11V11.99z"/></svg>
@@ -1504,7 +1504,7 @@
             <div class="program-card non-profit">
               <div class="program-card__shine"></div>
               <div class="program-card__hover-effect"></div>
-              <div class="program-card__badges">Nom-Profit</div>
+              <div class="program-card__badges">Non-Profit</div>
               <div class="program-card__header">
                 <div class="program-card__icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"/></svg>
