gestion des icones

--- a/index.html
+++ b/index.html
@@ -550,16 +550,16 @@
           </div>
           <div class="mv-fun-content">
             <p>Fournir des solutions stratégiques, financières et opérationnelles personnalisées, pour aider les organisations à renforcer leur efficacité, sécuriser leurs financements et créer un impact durable.</p>
-            <div class="mission-rocket">
-              🚀
+            <!-- <div class="mission-rocket">
+              
               <div class="rocket-trail"></div>
-            </div>
+            </div> -->
           </div>
-          <div class="mv-fun-footer">
+          <!-- <div class="mv-fun-footer">
             <div class="confetti"></div>
             <div class="confetti"></div>
             <div class="confetti"></div>
-          </div>
+          </div> -->
         </div>
   
         <!-- Vision Card -->
@@ -573,19 +573,19 @@
           </div>
           <div class="mv-fun-content">
             <p>Être un cabinet de référence en Afrique pour la structuration, la croissance et la professionnalisation des organisations à fort potentiel d'impact.</p>
-            <div class="vision-globe">
-              🌍
-              <div class="globe-ring"></div>
+            <!-- <div class="vision-globe"> -->
+              
+              <!-- <div class="globe-ring"></div>
               <div class="impact-point" style="--delay: 0s"></div>
               <div class="impact-point" style="--delay: 0.5s"></div>
               <div class="impact-point" style="--delay: 1s"></div>
-            </div>
-          </div>
-          <div class="mv-fun-footer">
+            </div> -->
+          <!-- </div> -->
+          <!-- <div class="mv-fun-footer">
             <div class="star">⭐</div>
             <div class="star">🌟</div>
             <div class="star">✨</div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
