--- a/header.html
+++ b/header.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link" href="index.html" style='color:white;'>Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="apropos.html" style='color:white;'>A propos</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html" style='color:white;'>Nos services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#nosreferent" style='color:white;'>Nos références</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#contact" style='color:white;'>Contactez-nous</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#nosreferent" style='color:white;'>Nos références</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#contact" style='color:white;'>Contactez-nous</a></li>
                 </ul>
             </div>
         </nav>
