--- a/footer.html
+++ b/footer.html
@@ -30,11 +30,11 @@
                         <div class="footer-widget">
                             <h3 class="footer-title">Liens rapides</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Accueil</a></li>
-                                <li><a href="#services">Services</a></li>
-                                <li><a href="#about">À propos</a></li>
-                                <li><a href="#">Équipe</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="index.html">Accueil</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="apropos.html">À propos</a></li>
+                                <li><a href="./index.html#nosreferent">Nos references </a></li>
+                                <li><a href="./index.html#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -73,7 +73,8 @@
         <div class="foot-note">
             <div class="container">
                 <div class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
-                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2024 Tous droits réservés. Conçu par <a href="https://thinkonagency.com" target="_blank" class="fh5-link">ThinkOn</a>.</p>
+                    <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2024 Tous droits réservés. Conçu par .</p>
+                    <!-- <a href="https://thinkonagency.com" target="_blank" class="fh5-link">ThinkOn</a> -->
                     <div class="footer-legal" data-aos="fade-left" data-aos-offset="0">
                         <a href="#">Mentions légales</a>
                         <a href="#">Politique de confidentialité</a>
