--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                     <div class="swiper-slide">
                         <div class="fun-client-card" data-tilt data-tilt-max="15">
                             <div class="fun-client-logo">
-                                <img src="assets/images/client3.png" alt="Client 3" class="img-fluid">
+                                <img src="assets/images/clients7.jpg" alt="Client 3" class="img-fluid">
                             </div>
                             <div class="fun-client-hover">
                                 <div class="speech-bubble">
